assets/css/style.css
/* ... */
/*for animation*/


@-webkit-keyframes slideFromBottomText {
    0% {
        -webkit-transform: translateY(100%);
        transform: translateY(100%);
    }

    50% {
        -webkit-transform: translateY(-7%);
        transform: translateY(-7%);
    }

    100% {
        -webkit-transform: translateY(0);
        transform: translateY(0);
    }
}


@keyframes slideFromBottomText {
    0% {
        -webkit-transform: translateY(100%);
        transform: translateY(100%);
    }

    50% {
        -webkit-transform: translateY(-7%);
        transform: translateY(-7%);
    }

    100% {
        -webkit-transform: translateY(0);
        transform: translateY(0);
    }
}


@-webkit-keyframes slideFromBottom {
    from {
        -webkit-transform: translateY(100%);
        transform: translateY(100%);
    }

    to {
        -webkit-transform: translateY(0);
        transform: translateY(0);
    }
}


@keyframes slideFromBottom {
    from {
        -webkit-transform: translateY(100%);
        transform: translateY(100%);
    }

    to {
        -webkit-transform: translateY(0);
        transform: translateY(0);
    }
}


@-webkit-keyframes slideFromBottomCloud {
    0% {
        -webkit-transform: translateY(100%);
        transform: translateY(100%);
    }

    50% {
        -webkit-transform: translateY(-7%);
        transform: translateY(-7%);
    }

    100% {
        -webkit-transform: translateY(0);
        transform: translateY(0);
    }
}


@keyframes slideFromBottomCloud {
    0% {
        -webkit-transform: translateY(100%);
        transform: translateY(100%);
    }

    50% {
        -webkit-transform: translateY(-7%);
        transform: translateY(-7%);
    }

    100% {
        -webkit-transform: translateY(0);
        transform: translateY(0);
    }
}


@-webkit-keyframes rotateBorder {
    0% {
        -webkit-transform: rotate(90deg);
        transform: rotate(90deg);
    }

    100% {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
}


@keyframes rotateBorder {
    0% {
        -webkit-transform: rotate(90deg);
        transform: rotate(90deg);
    }

    100% {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
}


.slideFromBottomText {
    -webkit-animation: slideFromBottomText 2s ease-out;
    animation: slideFromBottomText 2s ease-out;
}

.slideFromBottom {
    -webkit-animation: slideFromBottom 1s ease-in;
    animation: slideFromBottom 1s ease-in;
}

.slideFromBottomCloud {
    -webkit-animation: slideFromBottomCloud 2s ease-in;
    animation: slideFromBottomCloud 2s ease-in;
}

.rotateBorder {
    -webkit-animation: rotateBorder 1s linear forwards;
    animation: rotateBorder 1s linear forwards;
}


/* section two */
#sectionEducation {
    padding: 80px 0 0 0;
    overflow: hidden;
    z-index: 2;
    position: relative;
}

.blockHeader {
    width: 70%;
    margin: 0 auto;
    text-align: center;
}

.blockHeader .title {
    font-family: 'Marcher';
    font-size: 44px;
    font-weight: 700;
    line-height: 36.96px;
    color: #000000;
    text-transform: uppercase;
}

.blockHeader .description {
    font-family: 'Marcher';
    text-align: center;
    color: #000000;
}

#sectionEducation .blockSlider {
    margin: 40px 0 0 68px;
    position: relative;
}

.swiperCategory {
    overflow: hidden;
    padding-bottom: 30px;
}

.swiper-buttons {
    position: absolute;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
    z-index: 10;
    margin-top: 120px;
}

#sectionEducation .swiper-buttons {
    left: calc(50% - 68px);
}

body .swiper-button-prev,
body .swiper-button-next {
    width: 60px;
    height: 60px;
    -webkit-box-shadow: 0px 4px 4px 0px #19427D40;
    box-shadow: 0px 4px 4px 0px #19427D40;
    border-radius: 50%;
    background: #7C828E33;
}


body .swiper-button-prev::after,
body .swiper-button-next::after {
    font-size: 20px;
    color: #041228;
}

body .swiper-button-prev:hover,
body .swiper-button-next:hover {
    background: #041228;
}

body .swiper-button-prev:hover::after,
body .swiper-button-next:hover::after {
    color: #FFFFFF;
}

body .swiper-button-prev {
    left: -40px;
    right: unset;
}

body .swiper-button-next {
    right: unset;
    left: 40px;
}

#sectionEducation .card {
    -webkit-box-shadow: 0px 7px 14.399999618530273px 0px #06253647;
    box-shadow: 0px 7px 14.399999618530273px 0px #06253647;
    padding: 25px 10px;
    text-align: center;
}

#sectionEducation .card .cardNumber {
    font-family: 'Marcher';
    font-size: 113px;
    font-weight: 700;
    line-height: 128.82px;
    color: #7C828EB2;
}

#sectionEducation .card .cardTitle {
    font-family: 'Marcher';
    font-size: 40px;
    font-weight: 700;
    line-height: 45.6px;
    text-align: center;
    color: #7C828E;
}

#sectionEducation .card .cardContent {
    font-family: 'Marcher';
    font-size: 12px;
    font-weight: 200;
    line-height: 16.68px;
    color: #000000;
    margin: 10px 45px 20px;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 4;
    line-clamp: 4;
    overflow: hidden;
}

/* #sectionEducation .card .cardContent:after {
    content: '';
    display: block;
    width: 100%;
    height: 0.5px;
    background: #19427D4F;
    margin-top: 20px;
} */

#sectionEducation .card .link {
    text-decoration: none;
    background: #656C7C;
    padding: 10px 30px;
    font-family: 'Marcher';
    font-size: 14px;
    font-weight: 200;
    color: #FFFFFF;
    margin: 0 auto;
    border-radius: 4px;
}

.swiperSubCategory {
    overflow: visible;
    -webkit-perspective: 1000px;
    perspective: 1000px;
}

.swiperSubCategory .swiper-wrapper {
    overflow: visible;
}

.swiperSubCategory .swiper-slide {
    -webkit-perspective: 1000px;
    perspective: 1000px;
    overflow: visible;
}
/* ... */

